Small memory improvements